--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: "Playfair Display", serif;
-  background-color: #e1edbb;
+  background-color: white;
 }
 
 html {
@@ -52,13 +52,14 @@ a {
 
 a:hover {
   color: grey;
-  text-decoration: underline;
+  text-decoration: none;
   text-underline-offset: 1rem;
   text-decoration-color: rgb(181, 181, 181);
 }
 
 .logo {
   font-size: 2rem;
+  font-weight: bold;
 }
 
 .logo:hover {
@@ -81,14 +82,14 @@ a:hover {
   flex-direction: column;
   justify-content: space-between;
   height: 24px;
-  width: 30px;
+  width: 35px;
   cursor: pointer;
 }
 
 .hamburger-icon span {
-  width: 100%;
+  width: 50%;
   height: 2px;
-  background-color: black;
+  background-color: rgb(6, 6, 6);
   transition: all 0.3 ease-in-out;
 }
 
@@ -96,7 +97,7 @@ a:hover {
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: white;
+  background-color: transparent;
   width: fit-content;
   max-height: 0;
   overflow: hidden;
@@ -107,10 +108,11 @@ a:hover {
   display: block;
   padding: 10px;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: black;
   text-decoration: none;
   transition: all 0.3 ease-in-out;
+  background-color: transparent;
 }
 
 .menu-links li {
@@ -153,7 +155,7 @@ section {
   margin: 0 10rem;
   box-sizing: border-box;
   min-height: fit-content;
-  border-radius: 5%;
+  border-radius: 10%;
   margin-bottom: 20px;
 }
 
@@ -164,11 +166,15 @@ section {
 /* PROFILE SECTION */
 
 #profile {
-  background-color: #a1c879;
+  background-color: whitesmoke;
   display: flex;
   justify-content: center;
   gap: 5rem;
-  height: 80vh;
+  /* height: 80vh; */
+  box-shadow: 2px 3px gainsboro;
+}
+section {
+  height: 70vh;
 }
 .section__text {
   margin-top: 100px;
@@ -328,8 +334,9 @@ section {
 
 #skills {
   position: relative;
-  background-color: #a1c879;
+  background-color: whitesmoke;
   padding: 30px;
+  box-shadow: 2px 3px gainsboro;
 }
 
 .skill-sub-title {
@@ -345,6 +352,9 @@ section {
   flex-direction: column;
 }
 
+#skills .about-containers {
+  gap: 1.2rem;
+}
 .article-container {
   display: flex;
   text-align: initial;
@@ -358,7 +368,7 @@ article {
   display: flex;
   width: 10rem;
   justify-content: space-around;
-  gap: 0.5rem;
+  gap: 0.2rem;
 }
 
 article .icon {
@@ -402,7 +412,8 @@ article .icon {
   justify-content: center;
   flex-direction: column;
   height: 70vh;
-  background-color: #a1c879;
+  background-color: whitesmoke;
+  box-shadow: 2px 3px gainsboro;
 }
 
 .contact-info-upper-container {
